# thetvdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  deserialize.rs  error.rs  language.rs  lib.rs  params.rs  response.rs  serialization.rs  serialize.rs  urls.rs
src/client/: tests.rs
src/params/: tests.rs
src/response/: deserialize.rs  movie.rs  tests.rs
tests/: client.rs
tests/data/: mod.rs
