[package]
name = "thetvdb"
version = "0.1.0-beta.2"
license = "MIT OR Apache-2.0"
description = "TheTVDB API async client"
repository = "https://github.com/roignpar/thetvdb"
readme = "README.md"
authors = ["Robert Ignat <robert.ignat91@gmail.com>"]
keywords = ["thetvdb", "api", "client"]
categories = ["api-bindings", "asynchronous"]
edition = "2018"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
url = "2.1.1"
serde_json = "1.0.51"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.4"
jsonwebtoken = "7.1.0"
lazy_static = "1.4.0"
optfield = "0.1.0"

[dependencies.reqwest]
version = "0.10.4"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "0.2.18", features = ["macros"] }
mockito = "0.25.1"
version-sync = "0.9.0"
