[package]
name = "thetvdb"
version = "0.1.0-beta.2"
license = "MIT OR Apache-2.0"
description = "TheTVDB API async client"
repository = "https://github.com/roignpar/thetvdb"
readme = "README.md"
authors = ["Robert Ignat <robert.ignat91@gmail.com>"]
keywords = ["thetvdb", "api", "client"]
categories = ["api-bindings", "asynchronous"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
url = "2.1.1"
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3.5"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
optfield = "0.1.0"

[dependencies.reqwest]
version = "0.10.7"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }
mockito = "0.27.0"
version-sync = "0.9.1"
