[package]
name = "thetvdb"
version = "0.1.0-beta.2"
license = "MIT OR Apache-2.0"
description = "TheTVDB API async client"
repository = "https://github.com/roignpar/thetvdb"
readme = "README.md"
authors = ["Robert Ignat <robert.ignat91@gmail.com>"]
keywords = ["thetvdb", "api", "client"]
categories = ["api-bindings", "asynchronous"]
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
url = "2.2.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
optfield = "0.2.0"

[dependencies.reqwest]
version = "0.11.3"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
mockito = "0.30.0"
version-sync = "0.9.2"
